# aruco_markers-release

./: .dockerignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
aruco_markers/: CHANGELOG.rst  CMakeLists.txt  package.xml
aruco_markers/include/aruco_markers/: aruco_markers.hpp
aruco_markers/src/: aruco_markers.cpp
aruco_markers/test/: test_aruco_markers.cpp
aruco_markers_msgs/: CHANGELOG.rst  package.xml
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-humble-aruco-markers-msgs.spec  ros-humble-aruco-markers.spec  ros-jazzy-aruco-markers-msgs.spec  ros-rolling-aruco-markers-msgs.spec  ros-rolling-aruco-markers.spec  template.spec
scripts/: build_and_test.sh
src/: aruco_markers.cpp
